2008-09-09  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.CoverArt/Banshee.CoverArt/CoverArtService.cs:
	Patch from Bertrand Lorentz working around crasher caused by brokenness in
	DatabaseConfigurationClient with respect to dates (BGO #538354).

2008-09-09  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Banshee.Playlists.Formats/PlaylistParser.cs:
	Patch from Eric Butler, fixed up HACKING-wise by myself, adding support
	for HTTP auth in URLs for Internet Radio stations (BGO #548044).

2008-09-09  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Core/Resources/contributors.xml: Add David.

2008-09-09  Gabriel Burt  <gabriel.burt@gmail.com>

	Patch from David Spreen adding cover art support to Mass Storage DAPs.

	* src/Dap/Banshee.Dap.MassStorage/Banshee.Dap.MassStorage/MassStorageSource.cs:
	Add .is_audio_player options CoverArtSize, CoverArtFileName and CoverArtFileType 
	where a size of -1 means disabled, 0 means 'just use the current size of specific 
	cover' and x > 0 means resize cover to x by x pixels.
	Add code to transfer cover to mass storage device art in accordance with those 
	values to AddTrackToDevice method.

	* src/Core/Banshee.Services/Banshee.Hardware/IDeviceMediaCapabilities.cs:
	Add CoverArtSize, CoverArtFileName and CoverArtFileType to IDeviceMediaCapabilities.

	* src/Backends/Banshee.Hal/Banshee.HalBackend/DeviceMediaCapabilities.cs:
	Add CoverArtSize, CoverArtFileName and CoverArtFileType to HAL backend.

2008-09-09  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.CoverArt/Banshee.CoverArt/CoverArtJob.cs: 
	* src/Core/Banshee.Services/Banshee.Sources/PrimarySource.cs: Fix bug with
	improperly getting the Uri of some tracks when fetching cover art (BGO
	#546234).

2008-09-09  Aaron Bockover  <abock@gnome.org>

	This commit implements the first pass at providing a mechanism for
	third party applications to query and index Banshee's collection in